[project]
python = "^3.12"
name = "eps-prescription-status-update-api"

[tool.poetry]
name = "eps-prescription-status-update-api"
version = "0.0.1-alpha"
description = "EPS Prescription Status Update API"
license = "MIT"
authors = [
    "Matthew Popat <matthew.popat1@nhs.net>",
    "Anthony Brown <anthony.brown8@nhs.net>",
    "Kris Szlapa <kris.szlapa1@nhs.net>",
    "Phil Gee <phil.gee@nhs.net>",
    "Adam Brown <adam.brown41@nhs.net>",
    "Jonathan Welch <jonathan.welch1@nhs.net>",
    "Jim Wild <james.wild6@nhs.net>",
    "Natasa Fragkou <natasa.fragkou@nhs.net>",
    "Jack Spagnoli <jack.spagnoli1@nhs.net>",
    "Tom Smith <tom.smith24@nhs.net>",
    "Sean Steberis <sean.steberis2@nhs.net>",
    "Rizwan Mehmood <rizwan.mehmood1@nhs.net>",
    "Thomas Merrington <thomas.merrington1@nhs.net>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-prescription-status-update-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.45"
requests = "^2.32.5"
boto3 = "^1.40.66"
argparse = "^1.4.0"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
cfn-lint = "^1.40.3"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
cfn-lint = "^1.40.3"
black = "^25.9.0"
flake8 = "^7.3.0"
jinja2 = "^3.1.5"
pip-licenses = "^5.5.0"
click = "^8.3.0"
rich = "^14.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
